fixed poster moment mobile layout breaking

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -40,16 +40,17 @@
   display: none;
   flex-wrap: wrap;
   position: relative;
-  padding: 10vh 0;
   @include omega;
   @include media($mobile) {
     @include span-columns(6 of 6);
     display: none;
+    padding: 5vh 5vw;
   };
   @include media($tablet) {
     @include span-columns(6 of 8);
     @include shift(1);
     display: none;
+    padding: 10vh 0;
   };
   @include media($laptop) {
     @include span-columns(8 of 10);
@@ -68,7 +69,7 @@
   cursor: pointer;
   @include transition(color 0.1s ease);
   @include media($mobile) {
-    padding: 1rem 0;
+    padding-bottom: 1rem;
     // left: 50%;
     position: initial;
     width: 100%;
