--- a/scss/components/_poster-moment.scss
+++ b/scss/components/_poster-moment.scss
@@ -9,6 +9,7 @@
   margin-top: 0;
   align-content: center;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .poster-moment__container {
